      multiple filesystems (but note that that is quite a bit slower than the
      single-filesystem case)

    - Optionally provide readline support for the mu server (when in tty-mode)

*** mu4e

    - Honor ~truncate-string-ellipsis~ so you can now use 'fancy' ellipses for
      truncated strings with ~(setq truncate-string-ellipsis "…")~


* 1.4 (released, as of April 18 2020)

*** mu

    - mu now defaults to the [[https://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html][XDG Base Directory Specification]] for the default
      locations for various files. E.g. on Unix the mu database now lives under
      ~~/.cache/mu/~ rather than ~~/.mu~. You can still use the old location by
      passing ~--muhome=~/.mu~ to various ~mu~ commands, or setting ~(setq
      mu4e-mu-home "~/.mu")~ for ~mu4e~.

      If your ~~/.cache~ is volatile (e.g., is cleared on reboot), you may want
      use ~--muhome~. Some mailing-list dicussion suggest that's fairly rare
      though.

      After upgrading, you may wish to delete the files in the old location to
      recover some diskspace.

    - There's a new subcommand ~mu init~ to initialize the mu database, which
      takes the ~--maildir~ and ~--my-address~ parameters that ~index~ used to take.
      These parameters are persistent so ~index~ does not need (or accept) them
      anymore. ~mu4e~ now depends on those parameters.

      ~init~ only needs to be run once or when changing these parameters. That
      implies that you need to re-index after changing these parameters. The
      ~.noupdate~ files are ignored when indexing the first time after ~mu init~ (or
      in general, when the database is empty).

    - There is another new subcommand ~mu info~ to get information about the mu
      database, the personal addresses etc.

    - The contacts cache (which is used by ~mu cfind~ and ~mu4e~'s
      contact-completion) is now stored as part of the Xapian database rather
      than as a separate file.
